--- a/SlagalicaProjekat/app/src/main/AndroidManifest.xml
+++ b/SlagalicaProjekat/app/src/main/AndroidManifest.xml
@@ -13,6 +13,9 @@
         android:theme="@style/Theme.SlagalicaProjekat"
         tools:targetApi="31">
         <activity
+            android:name=".Game3Activity"
+            android:exported="false" />
+        <activity
             android:name=".Game5Activity"
             android:exported="false" />
         <activity
