--- a/SlagalicaProjekat/app/build.gradle
+++ b/SlagalicaProjekat/app/build.gradle
@@ -31,7 +31,7 @@ android {
 }
 
 dependencies {
-
+    implementation 'org.mozilla:rhino:1.7.10'
     implementation 'androidx.appcompat:appcompat:1.6.1'
     implementation 'com.google.android.material:material:1.9.0'
     implementation 'com.google.firebase:firebase-database:20.2.2'
