--- a/SlagalicaProjekat/app/src/main/AndroidManifest.xml
+++ b/SlagalicaProjekat/app/src/main/AndroidManifest.xml
@@ -13,16 +13,16 @@
         android:theme="@style/Theme.SlagalicaProjekat"
         tools:targetApi="31">
         <activity
-            android:name=".Game3Activity"
+            android:name=".Activities.Game6Activity"
             android:exported="false" />
         <activity
-            android:name=".Game5Activity"
+            android:name=".Activities.Game3Activity"
             android:exported="false" />
         <activity
-            android:name=".Game4Activity"
+            android:name=".Activities.Game4Activity"
             android:exported="false" />
         <activity
-            android:name=".MainActivity"
+            android:name=".Activities.MainActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -31,20 +31,17 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".MyProfileActivity"
+            android:name=".Activities.MyProfileActivity"
             android:exported="false" />
         <activity
-            android:name=".Game2Activity"
+            android:name=".Activities.LogUserActivity"
             android:exported="false" />
         <activity
-            android:name=".LogUserActivity"
-            android:exported="false" />
-        <activity
-            android:name=".RegisterActivity"
+            android:name=".Activities.RegisterActivity"
             android:exported="false"
             android:theme="@style/Theme.SlagalicaProjekat.NoActionBar" />
         <activity
-            android:name=".LoginActivity"
+            android:name=".Activities.LoginActivity"
             android:exported="false"
             android:label="@string/title_activity_login"
             android:theme="@style/Theme.SlagalicaProjekat.NoActionBar" />
