--- a/SlagalicaProjekat/app/src/main/AndroidManifest.xml
+++ b/SlagalicaProjekat/app/src/main/AndroidManifest.xml
@@ -13,6 +13,12 @@
         android:theme="@style/Theme.SlagalicaProjekat"
         tools:targetApi="31">
         <activity
+            android:name=".Activities.UserProfileActivity"
+            android:exported="false" />
+        <activity
+            android:name=".Activities.RangListaActivity"
+            android:exported="false" />
+        <activity
             android:name=".Activities.KrajIgreActivity"
             android:exported="false" />
         <activity
